--- a/css/main.css
+++ b/css/main.css
@@ -1315,22 +1315,26 @@ header .user-image {
 ========================================================================== */
 .blog-item {
 	margin-top: 50px;
+	position: relative;
+	overflow: hidden;
 }
 
 .blog-item img {
-	filter: grayscale(1);
-	-webkit-filter: grayscale(1);
-	transition: .3s;
-	-webkit-transition: .3s;
-	-moz-transition: .3s;
-	-ms-transition: .3s;
-	-o-transition: .3s;
+	transition: 1.5s cubic-bezier(.23,1,.32,1);
+	-webkit-transition: 1.5s cubic-bezier(.23,1,.32,1);
+	-moz-transition: 1.5s cubic-bezier(.23,1,.32,1);
+	-ms-transition: 1.5s cubic-bezier(.23,1,.32,1);
+	-o-transition: 1.5s cubic-bezier(.23,1,.32,1);
 }
 
 .blog-item:hover img {
-	filter: grayscale(0);
-	-webkit-filter: grayscale(0);
-}
+	transform: scale(1.2);
+	-webkit-transform: scale(1.2);
+	-moz-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	-o-transform: scale(1.2);
+	}
+
 
 .blog-info .tag {
 	margin-top: 20px;
