--- a/css/main.css
+++ b/css/main.css
@@ -102,12 +102,13 @@ li {
    03. COMMON CSS
 ========================================================================== */
 .section-standard {
-	position: absolute;
+	position:absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	padding-top: 75px;
+	
 }
 
 .overlay {
@@ -1627,4 +1628,87 @@ body.popup-added .progress-wrap {
 	box-sizing:border-box;
 	-webkit-transition: all 200ms linear;
     transition: all 200ms linear;
+}
+
+.style_heroRight__KCUy1 {
+    position: relative
+}
+
+.style_heroImageWrapper__tqkBR {
+    position: absolute;
+    left: 50%;
+    top: -50px;
+    transform: translate(-50%);
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center
+}
+
+@media(max-width: 1200px) {
+    .style_heroImageWrapper__tqkBR {
+        position:static;
+        transform: translate(0)
+    }
+}
+
+.style_heroImage__lFcFh {
+    width: auto;
+    max-height: calc(100vh - 200px);
+    max-width: 366px
+}
+
+.style_heroImage__lFcFh video {
+    display: block;
+    height: 100%;
+    width: auto;
+    border-radius: 24px
+}
+
+@media(max-width: 767px) {
+    .style_heroImage__lFcFh video {
+        border-radius:21px
+    }
+}
+
+.style_heroVideo__MLViu {
+    display: flex;
+    justify-content: center
+}
+
+.style_heroVideo__MLViu .style_heroVideoMockup__vtKdz {
+    padding: 3px;
+    overflow: hidden;
+    height: 800px;
+    max-height: 100%;
+    position: relative
+}
+
+.style_heroVideo__MLViu .style_heroVideoMockup__vtKdz:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 4px solid var(--neutral100);
+    border-radius: 32px
+}
+
+@media(max-width: 767px) {
+    .style_heroVideo__MLViu .style_heroVideoMockup__vtKdz:before {
+        border-radius:24px
+    }
+}
+
+@media(max-width: 1200px) {
+    .style_heroVideo__MLViu .style_heroVideoMockup__vtKdz {
+        max-height:630px
+    }
+}
+
+@media(max-width: 767px) {
+    .style_heroVideo__MLViu .style_heroVideoMockup__vtKdz {
+        max-height:450px
+    }
 }
